--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -190,14 +190,11 @@
                 <td>{{ p.email }}</td>
                 <td>{{ p.notes }}</td>
                 <td class="action-btns">
-                    <!-- Add Measurement Sheet -->
-<a href="{{ url_for('add_measurement_sheet', project_id=row[0]) }}" class="btn btn-success btn-sm">Add Measurement Sheet</a>
 
-<!-- Edit Measurement Sheet -->
-<a href="{{ url_for('edit_measurement_sheet', sheet_id=row[0]) }}" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="{{ url_for('add_measurement_sheet', project_id=p['id']) }}" class="btn btn-success btn-sm">Add Measurement Sheet</a>
+<a href="{{ url_for('edit_measurement_sheet', sheet_id=p['id']) }}" class="btn btn-warning btn-sm">Edit</a>
+<a href="{{ url_for('delete_measurement_sheet', sheet_id=p['id']) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this sheet?')">Delete</a>
 
-<!-- Delete Measurement Sheet -->
-<a href="{{ url_for('delete_measurement_sheet', sheet_id=row[0]) }}" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this sheet?')">Delete</a>
                 </td>
             </tr>
             {% endfor %}
